# seccenter

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: .gitignore  settings.json
.claude/agents/: code-reviewer.md  debug-expert.md
.claude/commands/: commit.md  new-feature.md  review.md
.claude/scripts/: check-branch.sh  check-comment-language.sh  check-file-length.sh  post-edit-format.sh  protect-secrets.sh
.claude/skills/code-review/: SKILL.md
apps/agent/: requirements.txt
apps/middleware-api/: Dockerfile  pyproject.toml  requirements.txt
apps/middleware-api/app/: main.py
apps/middleware-api/app/core/: config.py
apps/middleware-api/app/db/: connection.py  models.py  repository.py
apps/middleware-api/app/router/: agent_proxy.py  callbacks.py  dlp.py  enrichment.py  sessions.py  uploads.py
apps/middleware-api/app/schemas/: asset.py  dlp.py  enrichment.py  session.py
apps/middleware-api/app/services/: dlp_classifier.py  dlp_masking.py  ioc_extractor.py  n8n_dispatcher.py
apps/middleware-api/tests/: conftest.py  test_callback_endpoint.py  test_dlp_classifier.py  test_dlp_masking.py  test_dlp_routes.py  test_enrichment_endpoint.py  test_health.py  test_ioc_extractor.py  test_n8n_dispatcher.py  test_sessions.py  test_uploads.py
apps/web-ui/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
docs/: Lastenheft.md  architecture.md  blueprint.md  control-center-ui.md  docker.md  master-doc.md  output-shemata.md  repo-struct.md  roadmap.md  settings-config,md
infrastructure/db/: init.sql
(+41 files in other folders)
